# sec-web-scraper

./: .bumpversion.cfg  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  Scraper.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  makefile.yml
contributing/: index.html
docs/: CONTRIBUTING.md  gen_ref_pages.py
docs/examples/: example1.ipynb  example1.md  index.md
examples/: index.html
examples/example1/: index.html
license/: index.html
reference/: SUMMARY.txt  index.html
reference/Downloader/: index.html
reference/Scraper/: index.html
search/: search_index.json
sec-web-scraper/: Scraper.py
sec_web_scraper/: Downloader.py  Scraper.py  __init__.py  __main__.py
sec_web_scraper/tests/: test_all.py  test_downloader.py
